tests/cpp/internal/negative_case/bad_deleted_destructor.cpp
// Negative test: deleted destructor should prevent variable declaration.
// EXPECTED_ERROR: deleted destructor

struct NoDtor {
    int x;
    ~NoDtor() = delete;
};

int main() {
    NoDtor n;  // ERROR: destructor is deleted
    return 0;
}
